--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@vitalets/google-translate-api": "^3.0.0",
     "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
-    "express": "^4.17.1"
+    "emoji-flags": "^1.3.0",
+    "express": "^4.17.1",
+    "node-emoji": "^1.10.0"
   }
 }
