--- a/package.json
+++ b/package.json
@@ -1,20 +1,139 @@
 {
-  "name": "Express-Google-Translate-API",
+  "name": "express-google-translate-api-with-ejs",
   "version": "1.0.0",
-  "description": "",
+  "description": "### Description - Built with: Node, Express, EJS and Bootstrap - API for Google Translate from [@vitalets/google-translate-api](https://www.npmjs.com/package/@vitalets/google-translate-api) - Emoji flags from [emoji-flags npm](https://www.npmjs.com/package/emoji-flags)",
   "main": "index.js",
+  "dependencies": {
+    "@vitalets/google-translate-api": "^3.0.0",
+    "accepts": "^1.3.7",
+    "ansi-regex": "^1.1.1",
+    "array-flatten": "^1.1.1",
+    "body-parser": "^1.19.0",
+    "bytes": "^3.1.0",
+    "cacheable-request": "^6.1.0",
+    "capture-stack-trace": "^1.0.1",
+    "clone": "^1.0.4",
+    "clone-response": "^1.0.2",
+    "columnify": "^1.5.1",
+    "configstore": "^2.1.0",
+    "content-disposition": "^0.5.3",
+    "content-type": "^1.0.4",
+    "cookie": "^0.4.0",
+    "cookie-signature": "^1.0.6",
+    "create-error-class": "^3.0.2",
+    "debug": "^2.6.9",
+    "decompress-response": "^3.3.0",
+    "defaults": "^1.0.3",
+    "defer-to-connect": "^1.1.3",
+    "depd": "^1.1.2",
+    "destroy": "^1.0.4",
+    "dot-prop": "^5.1.1",
+    "duplexer3": "^0.1.4",
+    "ee-first": "^1.1.1",
+    "ejs": "^3.0.1",
+    "emoji-flags": "^1.3.0",
+    "encodeurl": "^1.0.2",
+    "end-of-stream": "^1.4.4",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "express": "^4.17.1",
+    "finalhandler": "^1.1.2",
+    "forwarded": "^0.1.2",
+    "fresh": "^0.5.2",
+    "get-stream": "^3.0.0",
+    "got": "^9.6.0",
+    "graceful-fs": "^4.2.3",
+    "http-cache-semantics": "^4.1.0",
+    "http-errors": "^1.7.2",
+    "iconv-lite": "^0.4.24",
+    "imurmurhash": "^0.1.4",
+    "inherits": "^2.0.3",
+    "ipaddr.js": "^1.9.1",
+    "is-redirect": "^1.0.0",
+    "is-retry-allowed": "^1.2.0",
+    "is-stream": "^1.1.0",
+    "json-buffer": "^3.0.0",
+    "keyv": "^3.1.0",
+    "lodash._basecallback": "^3.3.1",
+    "lodash._baseeach": "^3.0.4",
+    "lodash._basefind": "^3.0.0",
+    "lodash._basefindindex": "^3.6.0",
+    "lodash._baseisequal": "^3.0.7",
+    "lodash._bindcallback": "^3.0.1",
+    "lodash._getnative": "^3.9.1",
+    "lodash.find": "^3.2.1",
+    "lodash.isarguments": "^3.1.0",
+    "lodash.isarray": "^3.0.4",
+    "lodash.istypedarray": "^3.0.6",
+    "lodash.keys": "^3.1.2",
+    "lodash.pairs": "^3.0.1",
+    "lodash.toarray": "^4.4.0",
+    "lowercase-keys": "^1.0.1",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.43.0",
+    "mime-types": "^2.1.26",
+    "mimic-response": "^1.0.1",
+    "minimist": "^1.2.5",
+    "mkdirp": "^0.5.4",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.2",
+    "node-emoji": "^1.10.0",
+    "normalize-url": "^4.5.0",
+    "object-assign": "^4.1.1",
+    "on-finished": "^2.3.0",
+    "once": "^1.4.0",
+    "os-homedir": "^1.0.2",
+    "os-tmpdir": "^1.0.2",
+    "osenv": "^0.1.5",
+    "p-cancelable": "^1.1.0",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "prepend-http": "^1.0.4",
+    "proxy-addr": "^2.0.6",
+    "pump": "^3.0.0",
+    "qs": "^6.7.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.4.0",
+    "responselike": "^1.0.2",
+    "safe-buffer": "^5.2.0",
+    "safer-buffer": "^2.1.2",
+    "send": "^0.17.1",
+    "serve-static": "^1.14.1",
+    "setprototypeof": "^1.1.1",
+    "slide": "^1.1.6",
+    "statuses": "^1.5.0",
+    "strip-ansi": "^2.0.1",
+    "timed-out": "^4.0.1",
+    "to-readable-stream": "^1.0.0",
+    "toidentifier": "^1.0.0",
+    "type-is": "^1.6.18",
+    "unpipe": "^1.0.0",
+    "unzip-response": "^2.0.1",
+    "url-parse-lax": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "uuid": "^2.0.3",
+    "vary": "^1.1.2",
+    "wcwidth": "^1.0.1",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^1.3.4",
+    "xdg-basedir": "^2.0.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rolandjlevy/Express-Google-Translate-API-with-EJS.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@vitalets/google-translate-api": "^3.0.0",
-    "body-parser": "^1.19.0",
-    "ejs": "^3.0.1",
-    "emoji-flags": "^1.3.0",
-    "express": "^4.17.1",
-    "node-emoji": "^1.10.0"
-  }
+  "bugs": {
+    "url": "https://github.com/rolandjlevy/Express-Google-Translate-API-with-EJS/issues"
+  },
+  "homepage": "https://github.com/rolandjlevy/Express-Google-Translate-API-with-EJS#readme"
 }
